[gd_scene load_steps=26 format=3 uid="uid://b3wkshjwwug7t"]

[ext_resource type="Script" uid="uid://b0bx5ejfkyopg" path="res://Scripts/new_hud.gd" id="1_jd4hw"]
[ext_resource type="Texture2D" uid="uid://d18ybvjmxbxjc" path="res://Assets/LifeAndEXPBars/BorderBG.png" id="2_e6lij"]
[ext_resource type="PackedScene" uid="uid://bs8rv5p0dbfq0" path="res://Scenes/skill_slot.tscn" id="3_0plam"]
[ext_resource type="Texture2D" uid="uid://cpsfhdqfv3ykq" path="res://Assets/LifeAndEXPBars/REDColors.png" id="3_dllsv"]
[ext_resource type="Texture2D" uid="uid://dbh4nuv6nk0gy" path="res://Assets/Card/sprite_sheet.png" id="4_bcuyj"]
[ext_resource type="Texture2D" uid="uid://cpj66psa8oo03" path="res://Assets/Icons/Icon37_withBG.png" id="5_1mesj"]
[ext_resource type="FontFile" uid="uid://ddjhh1juon5oe" path="res://Fonts/Bear Days.ttf" id="5_a6cb5"]
[ext_resource type="Texture2D" uid="uid://b7ko0jgxt7lit" path="res://Assets/Rope/rope_texture.png" id="5_cdm4t"]
[ext_resource type="Texture2D" uid="uid://dhn51cepvcdo7" path="res://Assets/LifeAndEXPBars/Monk_LifeBar_Border-01.png" id="8_bcuyj"]
[ext_resource type="Texture2D" uid="uid://b73jrcvydice8" path="res://Assets/LifeAndEXPBars/Monk_LifeBar_Under-01.png" id="9_y3i04"]
[ext_resource type="Texture2D" uid="uid://cte78o7moehfe" path="res://Assets/LifeAndEXPBars/Monk_LifeBar_Fill-01.png" id="10_ty2b2"]
[ext_resource type="Texture2D" uid="uid://b0dc16kbwnjh" path="res://Assets/LifeAndEXPBars/Monk_LifeBar_Avatar-01.png" id="11_a6cb5"]
[ext_resource type="Texture2D" uid="uid://bwgnong3g2vo3" path="res://Assets/LifeAndEXPBars/Bear_LifeBar_Border-01.png" id="12_a6cb5"]
[ext_resource type="Texture2D" uid="uid://bfj6w6lo33kpn" path="res://Assets/Icons/15.png" id="12_olccw"]
[ext_resource type="Texture2D" uid="uid://cxgarhbcxvxx" path="res://Assets/Icons/10.png" id="13_1mesj"]
[ext_resource type="Texture2D" uid="uid://rk2081lh1dr3" path="res://Assets/LifeAndEXPBars/Bear_LifeBar_Under-01.png" id="13_y8mjb"]
[ext_resource type="Texture2D" uid="uid://dr21e5oqjktg7" path="res://Assets/Icons/18.png" id="14_gpxep"]
[ext_resource type="Texture2D" uid="uid://x2lk1c52de4p" path="res://Assets/LifeAndEXPBars/Bear_LifeBar_Fill-01.png" id="14_lgw6u"]
[ext_resource type="Texture2D" uid="uid://ch2cm1gaa7g74" path="res://Assets/LifeAndEXPBars/Bear_LifeBar_Avatar-01.png" id="15_olccw"]
[ext_resource type="Texture2D" uid="uid://ih7t0vht4ql2" path="res://Assets/Card/red_circleshape.png" id="16_gpxep"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y3i04"]
atlas = ExtResource("2_e6lij")
region = Rect2(114, 354, 12, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty2b2"]
atlas = ExtResource("3_dllsv")
region = Rect2(114, 354, 12, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6cb5"]
atlas = ExtResource("4_bcuyj")
region = Rect2(358, 678, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6lij"]
atlas = ExtResource("5_cdm4t")
region = Rect2(0, 123.074, 256, 14.252007)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_msa0c"]
load_path = "res://.godot/imported/blue_circleshape.png-726dc8c6fec2e05d2d3269052118df68.ctex"

[node name="NewHUD" type="CanvasLayer"]
script = ExtResource("1_jd4hw")
icon_lunge = ExtResource("12_olccw")
icon_charge = ExtResource("13_1mesj")
icon_meteor = ExtResource("14_gpxep")
icon_honey = ExtResource("5_1mesj")
metadata/_edit_vertical_guides_ = [640.0]
metadata/_edit_horizontal_guides_ = [360.0]

[node name="XPBar" type="TextureProgressBar" parent="."]
texture_filter = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -26.0
offset_right = -21.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
value = 36.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_y3i04")
texture_progress = SubResource("AtlasTexture_ty2b2")

[node name="TextureRect" type="TextureRect" parent="XPBar"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -17.0
offset_top = -26.0
offset_right = 17.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("AtlasTexture_a6cb5")
stretch_mode = 4

[node name="LevelLabel" type="Label" parent="XPBar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = -24.0
offset_right = 12.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("5_a6cb5")
theme_override_font_sizes/font_size = 23
text = "27"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RopeBar" type="TextureProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -88.0
offset_right = 203.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
nine_patch_stretch = true
texture_progress = SubResource("AtlasTexture_e6lij")

[node name="MonkPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 379.0
offset_top = 612.0
offset_right = 419.0
offset_bottom = 652.0

[node name="Skills" type="Control" parent="MonkPanel"]
anchors_preset = 0
offset_left = 17.0
offset_top = 8.0
offset_right = 57.0
offset_bottom = 48.0

[node name="SkillSlot01" parent="MonkPanel/Skills" instance=ExtResource("3_0plam")]
layout_mode = 0
offset_left = 85.0
offset_top = -53.0
offset_right = 85.0
offset_bottom = 40.0

[node name="SkillSlot02" parent="MonkPanel/Skills" instance=ExtResource("3_0plam")]
layout_mode = 0
offset_left = 136.0
offset_top = -113.0
offset_right = 136.0
offset_bottom = -20.0

[node name="KeyLabel" parent="MonkPanel/Skills/SkillSlot02/TextureRect" index="0"]
text = "2"

[node name="SkillSlot03" parent="MonkPanel/Skills" instance=ExtResource("3_0plam")]
layout_mode = 0
offset_left = 188.0
offset_top = -53.0
offset_right = 188.0
offset_bottom = 40.0

[node name="CircleShapeBorder" parent="MonkPanel/Skills/SkillSlot03" index="3"]
texture = SubResource("CompressedTexture2D_msa0c")

[node name="KeyLabel" parent="MonkPanel/Skills/SkillSlot03/TextureRect" index="0"]
text = "3"

[node name="HPBar_Border" type="TextureRect" parent="MonkPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = 69.369995
offset_right = -29.0
offset_bottom = 512.37
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5707964
scale = Vector2(0.47, 0.47)
texture = ExtResource("8_bcuyj")
expand_mode = 1

[node name="HPBar" type="TextureProgressBar" parent="MonkPanel"]
layout_mode = 0
offset_left = -160.0
offset_top = 69.369995
offset_right = 11.0
offset_bottom = 552.37
rotation = -1.5707964
scale = Vector2(0.47, 0.47)
value = 57.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("9_y3i04")
texture_progress = ExtResource("10_ty2b2")

[node name="Avatar" type="TextureRect" parent="MonkPanel"]
layout_mode = 0
offset_left = -13.0
offset_top = -158.5
offset_right = 158.0
offset_bottom = 324.5
scale = Vector2(0.47, 0.47)
texture = ExtResource("11_a6cb5")
stretch_mode = 5

[node name="BearPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 839.0
offset_top = 612.0
offset_right = 879.0
offset_bottom = 652.0

[node name="Skills" type="Control" parent="BearPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SkillSlot01" parent="BearPanel/Skills" instance=ExtResource("3_0plam")]
layout_mode = 0
offset_left = -144.0
offset_top = -45.0
offset_right = -144.0
offset_bottom = -5.0

[node name="CircleShapeBorder" parent="BearPanel/Skills/SkillSlot01" index="3"]
texture = ExtResource("16_gpxep")

[node name="TextureRect" parent="BearPanel/Skills/SkillSlot01" index="4"]
visible = false

[node name="SkillSlot02" parent="BearPanel/Skills" instance=ExtResource("3_0plam")]
layout_mode = 0
offset_left = -41.0
offset_top = -45.0
offset_right = -41.0
offset_bottom = -5.0

[node name="CircleShapeBorder" parent="BearPanel/Skills/SkillSlot02" index="3"]
texture = ExtResource("16_gpxep")

[node name="TextureRect" parent="BearPanel/Skills/SkillSlot02" index="4"]
visible = false

[node name="SkillSlot03" parent="BearPanel/Skills" instance=ExtResource("3_0plam")]
layout_mode = 0
offset_left = -93.0
offset_top = -105.0
offset_right = -93.0
offset_bottom = -65.0

[node name="CircleShapeBorder" parent="BearPanel/Skills/SkillSlot03" index="3"]
texture = ExtResource("16_gpxep")

[node name="TextureRect" parent="BearPanel/Skills/SkillSlot03" index="4"]
visible = false

[node name="HPBar_Border" type="TextureRect" parent="BearPanel"]
layout_mode = 1
offset_left = 224.59998
offset_top = -24.0
offset_right = 451.59998
offset_bottom = 491.0
rotation = 1.5707964
scale = Vector2(0.44, 0.44)
texture = ExtResource("12_a6cb5")

[node name="HPBar" type="TextureProgressBar" parent="BearPanel"]
layout_mode = 1
offset_left = 224.59998
offset_top = -24.0
offset_right = 451.59998
offset_bottom = 491.0
rotation = 1.5707964
scale = Vector2(0.44, 0.44)
value = 80.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("13_y8mjb")
texture_progress = ExtResource("14_lgw6u")

[node name="Avatar" type="TextureRect" parent="BearPanel"]
layout_mode = 1
offset_left = -2.0
offset_top = -151.0
offset_right = 225.0
offset_bottom = 364.0
scale = Vector2(0.44, 0.44)
texture = ExtResource("15_olccw")
stretch_mode = 4

[editable path="MonkPanel/Skills/SkillSlot02"]
[editable path="MonkPanel/Skills/SkillSlot03"]
[editable path="BearPanel/Skills/SkillSlot01"]
[editable path="BearPanel/Skills/SkillSlot02"]
[editable path="BearPanel/Skills/SkillSlot03"]
